[gd_scene load_steps=31 format=3 uid="uid://buatnjyns8suo"]

[ext_resource type="Script" path="res://Enemy/Boss/OrbBoss/orb_boss.gd" id="1_xd02q"]
[ext_resource type="AudioStream" uid="uid://br7qrctgmnhxr" path="res://Assets/Audio/enemy/ball boss/yoyo_ballylaugh1.wav" id="2_iynlc"]
[ext_resource type="AudioStream" uid="uid://dnu5s1xbq05jn" path="res://Assets/Audio/enemy/ball boss/yoyo_ballyhurt1.wav" id="2_oatiw"]
[ext_resource type="Texture2D" uid="uid://c1b87fwkn5ded" path="res://Assets/Art/Sprites/bosses/Boss1/orb_boss.png" id="2_sxjll"]
[ext_resource type="AudioStream" uid="uid://br1yost22r4w2" path="res://Assets/Audio/enemy/ball boss/yoyo_ballylaugh2.wav" id="3_14sbk"]
[ext_resource type="AudioStream" uid="uid://b6ub6thjtkxtw" path="res://Assets/Audio/enemy/ball boss/yoyo_ballyhurt2.wav" id="3_ig7ac"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5tabs"]
playback_mode = 1
streams_count = 2
stream_0/stream = ExtResource("2_iynlc")
stream_1/stream = ExtResource("3_14sbk")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_dbv48"]
streams_count = 2
stream_0/stream = ExtResource("2_oatiw")
stream_1/stream = ExtResource("3_ig7ac")

[sub_resource type="CircleShape2D" id="CircleShape2D_wjdh3"]
radius = 18.4783

[sub_resource type="Animation" id="Animation_ie8q2"]
length = 0.001

[sub_resource type="Animation" id="Animation_hp1m5"]
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69]
}

[sub_resource type="Animation" id="Animation_wukh0"]
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82]
}

[sub_resource type="Animation" id="Animation_128h2"]
length = 2.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189]
}

[sub_resource type="Animation" id="Animation_l7apv"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [52, 53, 54, 55, 56]
}

[sub_resource type="Animation" id="Animation_nxm5s"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 3, 2]
}

[sub_resource type="Animation" id="Animation_ew0v3"]
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 26, 27, 28, 27, 29, 30]
}

[sub_resource type="Animation" id="Animation_wp4ew"]
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [31, 32, 33, 33, 34, 35, 34, 36, 37]
}

[sub_resource type="Animation" id="Animation_l6tpc"]
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [38, 39, 40, 40, 41, 42, 41, 43, 44]
}

[sub_resource type="Animation" id="Animation_5y4jh"]
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 47, 48, 49, 48, 50, 51]
}

[sub_resource type="Animation" id="Animation_7a4p7"]
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.800003, 0.900003, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [83, 84, 83, 84, 83, 84, 83, 84, 83, 84, 83, 84, 83, 84, 83, 84, 83, 84, 83, 84, 83]
}

[sub_resource type="Animation" id="Animation_50o0l"]
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [137, 138, 139, 140, 141, 142, 143, 144, 137]
}

[sub_resource type="Animation" id="Animation_pa08r"]
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [121, 122, 123, 124, 125, 126, 127, 128, 121]
}

[sub_resource type="Animation" id="Animation_0g8m4"]
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [129, 130, 131, 132, 133, 134, 135, 136, 129]
}

[sub_resource type="Animation" id="Animation_0blfy"]
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [145, 146, 147, 148, 149, 150, 151, 152, 145]
}

[sub_resource type="Animation" id="Animation_d26f2"]
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [153, 154, 155, 156, 157, 158, 159, 160, 153]
}

[sub_resource type="Animation" id="Animation_ugs4n"]
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(-0.00666665, 0.0633333, 0.133333, 0.203333, 0.283333, 0.363333, 0.443333, 0.533333, 0.623333, 0.713333, 0.813333, 0.913333, 1.01333, 1.11333, 1.21333, 1.31333, 1.41333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MimicTempArea/MimicCollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.433333, 0.533333, 0.633333, 0.7, 0.766667, 0.866667, 1.43333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-8, 29), Vector2(-7, 29), Vector2(-6, 29), Vector2(-1, 29), Vector2(3, 29), Vector2(0, 29), Vector2(5, 29), Vector2(6, 29), Vector2(13, 29)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MimicTempArea/MimicCollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_tttbh"]
length = 2.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 17, 18, 19, 17, 20, 21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l0xol"]
_data = {
"RESET": SubResource("Animation_ie8q2"),
"bite_left": SubResource("Animation_hp1m5"),
"bite_right": SubResource("Animation_wukh0"),
"death": SubResource("Animation_128h2"),
"hurt": SubResource("Animation_l7apv"),
"idle": SubResource("Animation_nxm5s"),
"idle2_left": SubResource("Animation_ew0v3"),
"idle2_right": SubResource("Animation_wp4ew"),
"idle_up": SubResource("Animation_l6tpc"),
"idle_up_clenched": SubResource("Animation_5y4jh"),
"laughing": SubResource("Animation_7a4p7"),
"projectile_down": SubResource("Animation_50o0l"),
"projectile_left": SubResource("Animation_pa08r"),
"projectile_right": SubResource("Animation_0g8m4"),
"projectile_up": SubResource("Animation_0blfy"),
"projectile_up_clenched": SubResource("Animation_d26f2"),
"splitting": SubResource("Animation_ugs4n"),
"transform": SubResource("Animation_tttbh")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_qm4wp"]
radius = 25.02

[sub_resource type="CircleShape2D" id="CircleShape2D_731oa"]
radius = 15.4865

[node name="OrbBoss" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_xd02q")
bally_laugh = SubResource("AudioStreamRandomizer_5tabs")
bally_hurt = SubResource("AudioStreamRandomizer_dbv48")
min_idle_timer = 3.51

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-8, 35)
scale = Vector2(1.29297, 1.3327)
shape = SubResource("CircleShape2D_wjdh3")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_sxjll")
hframes = 14
vframes = 14
frame = 24
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "res://Assets/Art/Sprites/bosses/Boss1",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "C:/Asesprite/Projects/bossrush/sprites/orb_boss.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "6a1397afa83a2fe43c8522de5e4dc847"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l0xol")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-8, 35)
shape = SubResource("CircleShape2D_qm4wp")

[node name="ReadyTimer" type="Timer" parent="."]
one_shot = true

[node name="MimicTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MimicSpawnLocation" type="Node2D" parent="."]
position = Vector2(14, 30)

[node name="MimicTempArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 19

[node name="MimicCollisionShape2D" type="CollisionShape2D" parent="MimicTempArea"]
position = Vector2(-8, 29)
scale = Vector2(1.29297, 1.3327)
shape = SubResource("CircleShape2D_731oa")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ReadyTimer" to="." method="_on_ready_timer_timeout"]
[connection signal="timeout" from="MimicTimer" to="." method="_on_mimic_timer_timeout"]
